--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>stone</h1>
       <P>Mystical Charms of Stones: Exploring Its Enchantment</P>
+      <img src="images/logo.gif" alt="" />
   </body>
 </html>
