--- a/pattern.html
+++ b/pattern.html
@@ -27,7 +27,7 @@
 <body>
 
   <header>
-    <div id="top"><a href="index.html"><img src="images/logo.png" width="10%" alt=""></a></div>
+    <div id="top"><a href="index.html"><img src="images/logo.png" width="100%" alt=""></a></div>
     <nav>
       <div id="MenuButton">
         <span class="MenuButtonLine"></span>
@@ -51,21 +51,49 @@
     <section id="pattern">
       <h1 style="text-align: center">PATTERN</h1>
 
-      <div class="image_box">
-      	<img src="images/1.jpg" alt="">
-      	<img src="images/2.jpg" alt="">
-      	<img src="images/3.jpg" alt="">
+    <div class="imglist_cards">
+      <!--1-->
+      <div class="imgcard_01">
+      	<img src="images/1.jpg" alt="" width="460" height="460">
       </div>
+      <!--2-->
+      <div class="imgcard_01">
+      	<img src="images/2.jpg" alt="" width="460" height="460">
+      </div>
+      <!--3-->
+      <div class="imgcard_01 imgcard_right">
+      	<img src="images/3.jpg" alt="" width="460" height="460">
+      </div>
+    </div>
 
-      <div class="image_box">
-      	<img src="images/4.jpg" alt="">
-      	<img src="images/5.jpg" alt="">
+    <div class="imglist_cards">
+      <!--4-->
+      <div class="imgcard_02">
+      	<img src="images/4.jpg" alt="" width="460" height="460">
       </div>
+      <!--5-->
+      <div class="imgcard_02-2 imgcard_right">
+      	<img src="images/5.jpg" alt="" width="695.9964" height="391.498">
+      </div>
+    </div>
 
-      <div class="image_box">
-      	<img src="images/6.jpg" alt="">
-      	<img src="images/7.jpg" alt="">
+    <div class="imglist_cards">
+      <!--6-->
+      <div class="imgcard_03">
+      	<img src="images/6.jpg" alt="" width="544" height="544">
       </div>
+      <!--7-->
+      <div class="imgcard_03-2 imgcard_right">
+      	<img src="images/7.jpg" alt="" width="544" height="544">
+      </div>
+    </div>
+
+    <div class="imglist_cards">
+      <!--8-->
+      <div class="imgcard_04">
+      	<img src="images/8.jpg" alt="" width="1120" height="630">
+      </div>
+    </div>
 
     </section>
 
