--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 
 <body>
 
+  <!-- ローディング画面 -->
+  <div class="loader">
+    <p class="txt">Loading</p>
+  </div>
+
   <div>
     <div style="text-align: center" id="top_home"><a href="#"><img src="images/logo.png" width="13%" alt=""></a></div>
     <nav>
