--- a/pattern.html
+++ b/pattern.html
@@ -53,45 +53,45 @@
 
     <div class="imglist_cards">
       <!--1-->
-      <div class="imgcard_01">
-      	<img src="images/1.jpg" alt="" width="460" height="460">
+      <div class="imgcard">
+      	<img src="images/1.jpg" alt=""><p>Mar 17, 2023</p>
       </div>
       <!--2-->
-      <div class="imgcard_01">
-      	<img src="images/2.jpg" alt="" width="460" height="460">
+      <div class="imgcard">
+      	<img src="images/2.jpg" alt=""><p>Mar 17, 2023</p>
       </div>
       <!--3-->
-      <div class="imgcard_01 imgcard_right">
-      	<img src="images/3.jpg" alt="" width="460" height="460">
+      <div class="imgcard imgcard_right">
+      	<img src="images/3.jpg" alt=""><p>Mar 17, 2023</p>
       </div>
     </div>
 
     <div class="imglist_cards">
       <!--4-->
-      <div class="imgcard_02">
-      	<img src="images/4.jpg" alt="" width="460" height="460">
+      <div class="imgcard_size">
+      	<img src="images/4.jpg" alt=""><p>Mar 17, 2023</p>
       </div>
       <!--5-->
-      <div class="imgcard_02-2 imgcard_right">
-      	<img src="images/5.jpg" alt="" width="695.9964" height="391.498">
+      <div class="imgcard_size imgcard_right">
+      	<img src="images/5.jpg" alt=""><p>Mar 17, 2023</p>
       </div>
     </div>
 
     <div class="imglist_cards">
       <!--6-->
-      <div class="imgcard_03">
-      	<img src="images/6.jpg" alt="" width="544" height="544">
+      <div class="imgcard">
+      	<img src="images/6.jpg" alt=""><p>Mar 17, 2023</p>
       </div>
       <!--7-->
-      <div class="imgcard_03-2 imgcard_right">
-      	<img src="images/7.jpg" alt="" width="544" height="544">
+      <div class="imgcard imgcard_right">
+      	<img src="images/7.jpg" alt=""><p>Mar 17, 2023</p>
       </div>
     </div>
 
     <div class="imglist_cards">
       <!--8-->
-      <div class="imgcard_04">
-      	<img src="images/8.jpg" alt="" width="1120" height="630">
+      <div class="imgcard_right">
+      	<img src="images/8.jpg" alt=""><p>Mar 17, 2023</p>
       </div>
     </div>
 
