--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- ローディング画面 -->
   <div class="loader">
-    <p class="txt">Loading</p>
+    <img src="images/logo.gif" width="" alt="">
   </div>
 
   <div>
