--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 
 <!-- ローディング画面 -->
-<div class="loader">
-  <img src="images/logo.gif" width="" alt="">
+<div id="loading">
+  <div class="spinner"><img src="images/logo.gif" width="" alt=""></div>
 </div>
 
 <body>
