--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
   </div>
 
   <div>
-    <div style="text-align: center" id="top_home"><a href="#"><img src="images/logo.png" width="13%" alt=""></a></div>
+    <div style="text-align: center" id="top_home"><a href="index.html"><img src="images/logo.png" width="13%" alt=""></a></div>
     <nav>
       <div id="MenuList_home">
+        <div id="MenuButton">
+          <span class="MenuButtonLine"></span>
+          <span class="MenuButtonLine"></span>
+          <span class="MenuButtonLine"></span>
+        </div>
         <ul>
-          <li><a href="#">ABOUT</a></li>
+          <li><a href="index.html">ABOUT</a></li>
           <li><a href="pattern.html">PATTERN</a></li>
           <li><a href="shape.html">SHAPE</a></li>
           <li><a href="sound.html">SOUND</a></li>
@@ -49,7 +54,7 @@
     </nav>
   </div>
 
-<p style="text-align: center"><img src="images/main.jpg" width="100%" alt="" id="main"></p>
+<p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main"></p>
 
   <footer>
     <small>
