--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   </div>
 
 <p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main"></p>
+<p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main_s"></p>
 
   <footer>
     <small>
