--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li><a href="pattern.html">PATTERN</a></li>
           <li><a href="shape.html">SHAPE</a></li>
           <li><a href="sound.html">SOUND</a></li>
-          <li><a href="project.html">PROJECT</a></li>
+          <!-- <li><a href="project.html">PROJECT</a></li> -->
         </ul>
       </div>
     </nav>
