--- a/pattern.html
+++ b/pattern.html
@@ -40,7 +40,7 @@
           <li><a href="#">PATTERN</a></li>
           <li><a href="shape.html">SHAPE</a></li>
           <li><a href="sound.html">SOUND</a></li>
-          <li><a href="project.html">PROJECT</a></li>
+          <!-- <li><a href="project.html">PROJECT</a></li> -->
         </ul>
       </div>
     </nav>
@@ -106,11 +106,11 @@
       <a href="index.html"><img src="images/logo.png" width="10%" alt=""></a>
         <div class="menu-left">
             <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#about">PATTERN</a></li>
-                <li><a href="#concept">SHAPE</a></li>
-                <li><a href="#product">SOUND</a></li>
-                <li><a href="#product">PROJECT</a></li>
+              <li><a href="index.html">ABOUT</a></li>
+              <li><a href="#">PATTERN</a></li>
+              <li><a href="shape.html">SHAPE</a></li>
+              <li><a href="sound.html">SOUND</a></li>
+              <!-- <li><a href="project.html">PROJECT</a></li> -->
             </ul>
         </div>
 
