--- a/sound.html
+++ b/sound.html
@@ -40,7 +40,7 @@
           <li><a href="pattern.html">PATTERN</a></li>
           <li><a href="sound.html">SHAPE</a></li>
           <li><a href="#">SOUND</a></li>
-          <li><a href="project.html">PROJECT</a></li>
+          <!-- <li><a href="project.html">PROJECT</a></li> -->
         </ul>
       </div>
     </nav>
@@ -51,72 +51,13 @@
     <section id="pattern">
       <h1 style="text-align: center">SOUND</h1>
 
-      <!--
+      <video src="images/1.mp4" width="100%" alt="" id="">
+      <video src="images/2.mp4" width="100%" alt="" id="">
+      <video src="images/3.mp4" width="100%" alt="" id="">
+      <video src="images/4.mp4" width="100%" alt="" id="">
+      <video src="images/5.mp4" width="100%" alt="" id="">
+      <video src="images/6.mp4" width="100%" alt="" id="">
 
-      <div class="image_box">
-      	<img src="images/1.jpg" alt="">
-      	<img src="images/2.jpg" alt="">
-      	<img src="images/3.jpg" alt="">
-      </div>
-
-      <div class="image_box">
-      	<img src="images/4.jpg" alt="">
-      	<img src="images/5.jpg" alt="">
-      </div>
-
-      <div class="image_box">
-      	<img src="images/6.jpg" alt="">
-      	<img src="images/7.jpg" alt="">
-      </div>
-
-    </section>
-
-
-  <div class="about-img"><img src="images/about02.jpg" width="100%" alt=""></div>
-
-
-    <section id="concept">
-      <h1>Concept</h1>
-
-      <div class="side-img">
-
-        <div class="side-text">
-
-          <h2>晴れの日の朝のように<br>爽やかであたたかい<br>プロダクト</h2>
-
-          <p>布の質感や手作りのあたたかみ、<br>自然をイメージした色選びをお楽しみください。</p>
-
-
-        </div>
-
-        <img src="images/concept03.jpg" width="100%" alt="">
-
-      </div>
-
-    </section>
-
-  <div class="concept-img">
-
-    <ul>
-      <li><img src="images/concept01.jpg" width="600"　hight="400" alt="" id="img01"></li>
-      <li><img src="images/concept02.jpg" width="600"　hight="400" alt="" id="img02"></li>
-    </ul>
-
-  </div>
-
-
-    <section id="product">
-      <h1>Product</h1>
-
-      <div class="parent_box">
-        <figure class="side_image02"><a href="images/product01.jpg" data-lightbox="group"><img src="images/product01.jpg" width="300"></a><h3>ポーチ</h3><p>¥1,000〜</p></figure>
-        <figure class="side_image02"><a href="images/product02.jpg" data-lightbox="group"><img src="images/product02.jpg" width="300"></a><h3>ポーチ</h3><p>¥1,000〜</p></figure>
-        <figure class="side_image02"><a href="images/product01.jpg" data-lightbox="group"><img src="images/product03.jpg" width="300"></a><h3>巾着</h3><p>¥1,500〜</p></figure>
-      </div>
-
-    </section>
-
--->
 
   </div>
 
@@ -127,11 +68,11 @@
       <a href="index.html"><img src="images/logo.png" width="10%" alt=""></a>
         <div class="menu-left">
             <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#about">PATTERN</a></li>
-                <li><a href="#concept">SHAPE</a></li>
-                <li><a href="#product">SOUND</a></li>
-                <li><a href="#product">PROJECT</a></li>
+              <li><a href="index.html">ABOUT</a></li>
+              <li><a href="#">PATTERN</a></li>
+              <li><a href="shape.html">SHAPE</a></li>
+              <li><a href="sound.html">SOUND</a></li>
+              <!-- <li><a href="project.html">PROJECT</a></li> -->
             </ul>
         </div>
 
