--- a/sound.html
+++ b/sound.html
@@ -50,14 +50,37 @@
 
     <section id="pattern">
       <h1 style="text-align: center">SOUND</h1>
+    <!--  <p style="text-align: center">石をクリックすると音が流れます</p> -->
 
-      <video src="images/1.mp4" width="100%" alt="" id="">
-      <video src="images/2.mp4" width="100%" alt="" id="">
-      <video src="images/3.mp4" width="100%" alt="" id="">
-      <video src="images/4.mp4" width="100%" alt="" id="">
-      <video src="images/5.mp4" width="100%" alt="" id="">
-      <video src="images/6.mp4" width="100%" alt="" id="">
+      <div class="imglist_cards">
+        <!--1-->
+        <div class="imgcard imgcard_shape">
+          <video src="images/1.mp4" muted autoplay width="100%" alt="" id=""></video>
+        </div>
 
+        <div class="imgcard imgcard_shape">
+          <video src="images/2.mp4" muted autoplay width="100%" alt="" id=""></video>
+        </div>
+
+        <div class="imgcard imgcard_right imgcard_shape">
+          <video src="images/3.mp4" muted autoplay width="100%" alt="" id=""></video>
+        </div>
+      </div>
+
+      <div class="imglist_cards">
+        <!--4-->
+        <div class="imgcard imgcard_shape">
+          <video src="images/4.mp4" muted autoplay width="100%" alt="" id=""></video>
+        </div>
+
+        <div class="imgcard imgcard_shape">
+          <video src="images/5.mp4" muted autoplay width="100%" alt="" id=""></video>
+        </div>
+
+        <div class="imgcard imgcard_right imgcard_shape">
+          <video src="images/6.mp4" muted autoplay width="100%" alt="" id=""></video>
+        </div>
+      </div>
 
   </div>
 
