--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </nav>
   </div>
 
-<p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main"></p>
-<p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main_s"></p>
+<p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main"></video></p>
+<p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main_s"></video></p>
 
   <footer>
     <small>
