--- a/pattern.html
+++ b/pattern.html
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="imglist_cards">
+    <div class="imglist_cards_auto">
       <!--4-->
       <div class="imgcard_size">
       	<img src="images/04.jpg" alt=""><p>Mar 17, 2023</p>
