--- a/index.html
+++ b/index.html
@@ -50,7 +50,17 @@
   </div>
 
 <p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main"></video></p>
-<p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main_s"></video></p>
+
+<div id="wrapper">
+  <section id="home_text">
+    <h1>このサイトについて</h1>
+<p>子どもの頃、石拾いをした経験はあるだろうか。<br>
+  その無作為に生まれた造形は魅力的であり、手触りや質感も心地良い。<br>
+  さらに、その中には自然の美しさや時間の流れを感じることができる奥深さが秘められている。<br>
+  冷たさや無機質さという一面を持ちつつも、石は不思議な魅力を放っている。<br>
+  そんな石に魅了され、研究に至る。</p>
+</div>
+</div>
 
   <footer>
     <small>
