--- a/pattern.html
+++ b/pattern.html
@@ -46,10 +46,15 @@
     </nav>
   </header>
 
+
   <div id="wrapper">
 
     <section id="pattern">
       <h1 style="text-align: center">PATTERN</h1>
+
+<div id="home_pattern">
+
+    </div>
 
     <div class="imglist_cards">
       <!--1-->
@@ -103,7 +108,7 @@
   <footer>
 
     <div class="foot-wrap">
-      <a href="index.html"><img src="images/logo.png" width="10%" alt=""></a>
+      <div id="bottom_logo"><a href="index.html"><img src="images/logo.png" width="100%" alt=""></a></div>
         <div class="menu-left">
             <ul>
               <li><a href="index.html">ABOUT</a></li>
