--- a/sound.html
+++ b/sound.html
@@ -38,7 +38,7 @@
         <ul>
           <li><a href="index.html">ABOUT</a></li>
           <li><a href="pattern.html">PATTERN</a></li>
-          <li><a href="sound.html">SHAPE</a></li>
+          <li><a href="shape.html">SHAPE</a></li>
           <li><a href="#">SOUND</a></li>
           <!-- <li><a href="project.html">PROJECT</a></li> -->
         </ul>
@@ -50,7 +50,7 @@
 
     <section id="pattern">
       <h1 style="text-align: center">SOUND</h1>
-    <!--  <p style="text-align: center">石をクリックすると音が流れます</p> -->
+    <p style="text-align: center">石をクリックすると音が流れます</p>
 
       <div class="imglist_cards">
         <!--1-->
@@ -88,7 +88,7 @@
   <footer>
 
     <div class="foot-wrap">
-      <a href="index.html"><img src="images/logo.png" width="10%" alt=""></a>
+      <div id="bottom_logo"><a href="index.html"><img src="images/logo.png" width="100%" alt=""></a></div>
         <div class="menu-left">
             <ul>
               <li><a href="index.html">ABOUT</a></li>
