--- a/shape.html
+++ b/shape.html
@@ -171,7 +171,7 @@
   <footer>
 
     <div class="foot-wrap">
-      <a href="index.html"><img src="images/logo.png" width="10%" alt=""></a>
+      <div id="bottom_logo"><a href="index.html"><img src="images/logo.png" width="100%" alt=""></a></div>
         <div class="menu-left">
             <ul>
               <li><a href="index.html">ABOUT</a></li>
