--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
           <li><a href="pattern.html">PATTERN</a></li>
           <li><a href="shape.html">SHAPE</a></li>
           <li><a href="sound.html">SOUND</a></li>
-          <!-- <li><a href="project.html">PROJECT</a></li> -->
+          <li><a href="project.html">PROJECT</a></li>
         </ul>
       </div>
     </nav>
   </div>
 
-<p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main"></video></p>
-
 <div id="wrapper">
+  <p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main"></video></p>
   <section id="home_text">
-    <h1>このサイトについて</h1>
-<p>子どもの頃、石拾いをした経験はあるだろうか。<br>
-  その無作為に生まれた造形は魅力的であり、手触りや質感も心地良い。<br>
-  さらに、その中には自然の美しさや時間の流れを感じることができる奥深さが秘められている。<br>
-  冷たさや無機質さという一面を持ちつつも、石は不思議な魅力を放っている。<br>
-  そんな石に魅了され、研究に至る。</p>
+    <h1>ABOUT</h1>
+<p>子どもの頃、石拾いをした経験はありますか？<br>
+  私はその無作為に生まれた造形や質感に魅力を感じています。<br>
+  さらに、そこには自然の美しさや時間の流れを感じることができる奥深さが秘められています。<br>
+  冷たさや無機質さという一面を持ちつつも、石は不思議な魅力を放っています。<br>
+  大人になり、体験することが減った石を様々な視点を解剖しています。<br>
+  石の柄、形、音...不思議な石の魅力を感じてください。</p>
 </div>
 </div>
 
