--- a/project.html
+++ b/project.html
@@ -51,72 +51,25 @@
     <section id="pattern">
       <h1 style="text-align: center">PROJECT</h1>
 
-      <!--
-
-      <div class="image_box">
-      	<img src="images/1.jpg" alt="">
-      	<img src="images/2.jpg" alt="">
-      	<img src="images/3.jpg" alt="">
-      </div>
-
-      <div class="image_box">
-      	<img src="images/4.jpg" alt="">
-      	<img src="images/5.jpg" alt="">
-      </div>
-
-      <div class="image_box">
-      	<img src="images/6.jpg" alt="">
-      	<img src="images/7.jpg" alt="">
-      </div>
-
-    </section>
-
-
-  <div class="about-img"><img src="images/about02.jpg" width="100%" alt=""></div>
-
-
-    <section id="concept">
-      <h1>Concept</h1>
-
-      <div class="side-img">
-
-        <div class="side-text">
-
-          <h2>晴れの日の朝のように<br>爽やかであたたかい<br>プロダクト</h2>
-
-          <p>布の質感や手作りのあたたかみ、<br>自然をイメージした色選びをお楽しみください。</p>
-
-
+      <div class="imglist_cards">
+        <!--1-->
+        <div class="imgcard imgcard_shape">
+          <img src="images/77.png" alt=""><p>TREE</p>
         </div>
-
-        <img src="images/concept03.jpg" width="100%" alt="">
-
+        <!--2-->
+        <div class="imgcard imgcard_shape">
+          <img src="images/78.png" alt=""><p>FLOWER</p>
+        </div>
+        <!--3-->
+        <div class="imgcard imgcard_shape">
+          <img src="images/79.png" alt=""><p>SPACE</p>
+        </div>
+        <!--4-->
+        <div class="imgcard imgcard_right imgcard_shape">
+          <img src="images/80.png" alt=""><p>APPLE</p>
+        </div>
       </div>
 
-    </section>
-
-  <div class="concept-img">
-
-    <ul>
-      <li><img src="images/concept01.jpg" width="600"　hight="400" alt="" id="img01"></li>
-      <li><img src="images/concept02.jpg" width="600"　hight="400" alt="" id="img02"></li>
-    </ul>
-
-  </div>
-
-
-    <section id="product">
-      <h1>Product</h1>
-
-      <div class="parent_box">
-        <figure class="side_image02"><a href="images/product01.jpg" data-lightbox="group"><img src="images/product01.jpg" width="300"></a><h3>ポーチ</h3><p>¥1,000〜</p></figure>
-        <figure class="side_image02"><a href="images/product02.jpg" data-lightbox="group"><img src="images/product02.jpg" width="300"></a><h3>ポーチ</h3><p>¥1,000〜</p></figure>
-        <figure class="side_image02"><a href="images/product01.jpg" data-lightbox="group"><img src="images/product03.jpg" width="300"></a><h3>巾着</h3><p>¥1,500〜</p></figure>
-      </div>
-
-    </section>
-
-  -->
 
   </div>
 
