--- a/index.html
+++ b/index.html
@@ -43,14 +43,13 @@
           <li><a href="pattern.html">PATTERN</a></li>
           <li><a href="shape.html">SHAPE</a></li>
           <li><a href="sound.html">SOUND</a></li>
-          <li><a href="project.html">PROJECT</a></li>
         </ul>
       </div>
     </nav>
   </div>
 
 <div id="wrapper">
-  <p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main"></video></p>
+  <p style="text-align: center"><video src="images/main02.mp4" muted autoplay width="100%" alt="" id="main"></video></p>
   <section id="home_text">
     <h1>ABOUT</h1>
 <p>子どもの頃、石拾いをした経験はありますか？<br>
