--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 
 <div id="wrapper">
-  <p style="text-align: center"><video src="images/main.mp4" muted autoplay width="100%" alt="" id="main"></video></p>
+  <p style="text-align: center"><video src="images/main02.mp4" muted autoplay loop width="100%" alt="" id="main"></video></p>
   <section id="home_text">
     <h1>ABOUT</h1>
 <p>子どもの頃、石拾いをした経験はありますか？<br>
