--- a/sound.html
+++ b/sound.html
@@ -50,6 +50,9 @@
 
     <section id="pattern">
       <h1 style="text-align: center">SOUND</h1>
+      <div id="mute">
+      <h4 style="text-align: center">Sorry, It's muted now.</h4>
+    </div>
 
       <div class="imglist_cards">
         <!--1-->
